Update all URLs to app.hx.finance
- Updated all references from hx.finance to app.hx.finance
- The app is hosted at app.hx.finance, not the main domain
- Fixed URLs in: connect-wallet, points-rewards, ecosystem, FAQ
- Consistent URL structure throughout docs

--- a/pages/ecosystem/overview.mdx
+++ b/pages/ecosystem/overview.mdx
@@ -17,7 +17,7 @@ The heart of our ecosystem - a community-owned DEX with:
 - Points-to-token fair launch model
 - Deep integration with other products
 
-[Start Trading →](https://hx.finance)
+[Start Trading →](https://app.hx.finance)
 
 ### 🛡️ innocence.is - Privacy Layer
 **Status**: Development
@@ -148,7 +148,7 @@ We're building bridges with other Hyperliquid projects that share our values:
 ## Get Involved
 
 ### As a User
-- [Start trading](https://hx.finance)
+- [Start trading](https://app.hx.finance)
 - [Provide liquidity](/docs/liquidity/becoming-lp)
 - [Earn points](/docs/points-rewards/how-points-work)
 - Share feedback
@@ -176,7 +176,7 @@ Everything we build prioritizes:
 ## Stay Connected
 
 ### Official Channels
-- **Website**: [hx.finance](https://hx.finance)
+- **Website**: [app.hx.finance](https://app.hx.finance)
 - **Twitter**: [@hxfinance](https://twitter.com/hxfinance)
 - **Discord**: [discord.gg/hxfinance](https://discord.gg/hxfinance)
 - **Telegram**: [t.me/hxfinance](https://t.me/hxfinance)
@@ -191,4 +191,4 @@ We're building the future of DeFi on Hyperliquid - decentralized, efficient, and
 
 **Start earning points today** and be part of the fair launch that sets the standard for Hyperliquid DeFi.
 
-[Get Started →](https://hx.finance)
+[Get Started →](https://app.hx.finance)
