--- a/pages/getting-started/connect-wallet.mdx
+++ b/pages/getting-started/connect-wallet.mdx
@@ -18,7 +18,7 @@ Don't have a wallet yet? No worries! [Get MetaMask here](https://metamask.io) - 
 
 ### Step 1: Visit hx.finance 🌐
 
-Head over to [hx.finance](https://hx.finance). Bookmark it to avoid phishing sites!
+Head over to [app.hx.finance](https://app.hx.finance). Bookmark it to avoid phishing sites!
 
 ### Step 2: Click "Connect Wallet" 🔌
 
@@ -92,7 +92,7 @@ You'll need a tiny bit of HYPE for transactions:
 
 ### The Golden Rules:
 - **NEVER share your seed phrase** - Not even with "support"
-- **Always check the URL** - Only use https://hx.finance
+- **Always check the URL** - Only use https://app.hx.finance
 - **Look for the padlock** 🔒 - In your browser bar
 - **Bookmark the real site** - Avoid phishing
 
