--- a/pages/getting-started/first-swap.mdx
+++ b/pages/getting-started/first-swap.mdx
@@ -15,7 +15,7 @@ Got everything? Let's go! 🚀
 
 ### Step 1: Head to the Swap Page 🔄
 
-Jump over to [hx.finance/swap](https://hx.finance/swap) - this is where the magic happens!
+Jump over to [app.hx.finance](https://app.hx.finance) - this is where the magic happens!
 
 ### Step 2: Pick Your Tokens 🪙
 
