--- a/pages/points-rewards/how-points-work.mdx
+++ b/pages/points-rewards/how-points-work.mdx
@@ -108,7 +108,7 @@ $2,000 liquidity + $100 daily trades:
 
 ## Your Points Dashboard 📱
 
-Track everything at [hx.finance/points](https://hx.finance/points):
+Track everything at [app.hx.finance/points](https://app.hx.finance/points):
 
 **Your Stats:**
 - Current points balance
@@ -186,4 +186,4 @@ A: It's never too late! Start earning today.
 
 *Remember: We're not just building a DEX, we're building a community. And you're a huge part of it!* 💜
 
-**[Check Your Points](https://hx.finance/points)** | **[Start Trading](/getting-started/first-swap)** | **[Provide Liquidity](/liquidity/becoming-lp)**
+**[Check Your Points](https://app.hx.finance/points)** | **[Start Trading](/getting-started/first-swap)** | **[Provide Liquidity](/liquidity/becoming-lp)**
