--- a/pages/troubleshooting/faq.mdx
+++ b/pages/troubleshooting/faq.mdx
@@ -144,7 +144,7 @@ So many ways!
 
 ### How do I stay safe?
 **The basics:**
-- Bookmark https://hx.finance (only trust this URL!)
+- Bookmark https://app.hx.finance (only trust this URL!)
 - Never share your seed phrase
 - We'll NEVER DM you first
 - If it seems too good to be true, it is
@@ -179,4 +179,4 @@ Sorry friend 😢 Report it in Discord so we can warn others. Unfortunately, blo
 
 *Still have questions? Jump in our Discord! The community is super friendly and someone's always around to help.* 💜
 
-**[Discord](https://discord.gg/hxfinance)** | **[Twitter](https://twitter.com/hxfinance)** | **[Start Trading](https://hx.finance)**
+**[Discord](https://discord.gg/hxfinance)** | **[Twitter](https://twitter.com/hxfinance)** | **[Start Trading](https://app.hx.finance)**
