Update HYPE acquisition guide to prioritize Hyperliquid app
- Reordered options to recommend Hyperliquid app first
- Then other DEXs (including hx.finance)
- Then centralized exchanges like Binance
- Bridge from Ethereum moved to option 4
- Fixed app.hx.finance URL in wrapping section

--- a/pages/getting-started/get-hype.mdx
+++ b/pages/getting-started/get-hype.mdx
@@ -10,7 +10,34 @@ To use hx.finance, you'll need HYPE for gas fees and WHYPE (Wrapped HYPE) for tr
 
 ## Getting HYPE
 
-### Option 1: Bridge from Ethereum (Recommended)
+### Option 1: Buy on Hyperliquid (Recommended)
+
+The easiest way is to buy HYPE directly on Hyperliquid:
+
+1. Visit [app.hyperliquid.xyz](https://app.hyperliquid.xyz)
+2. Connect your wallet
+3. Go to the Spot trading section
+4. Buy HYPE with USDC or other tokens
+5. Withdraw HYPE to your EVM wallet for use on hx.finance
+
+### Option 2: Use Other DEXs
+
+HYPE is available on several decentralized exchanges:
+- hx.finance (that's us!)
+- Other Hyperliquid-based DEXs
+- Check liquidity and rates before trading
+
+### Option 3: Buy on Centralized Exchanges
+
+If you prefer CEXs, HYPE is listed on:
+- Binance
+- OKX
+- Bybit
+- Gate.io
+
+After purchasing, withdraw directly to your Hyperliquid EVM address.
+
+### Option 4: Bridge from Ethereum
 
 1. Visit the [Hyperliquid Bridge](https://bridge.hyperliquid.xyz)
 2. Connect your wallet on Ethereum
@@ -19,29 +46,13 @@ To use hx.finance, you'll need HYPE for gas fees and WHYPE (Wrapped HYPE) for tr
 5. Wait ~10 minutes for the bridge to complete
 6. You'll receive HYPE on Hyperliquid
 
-### Option 2: Buy on a CEX
-
-Several exchanges support HYPE:
-- Binance
-- OKX
-- Bybit
-- Gate.io
-
-After purchasing, withdraw directly to your Hyperliquid address.
-
-### Option 3: OTC or P2P
-
-- Ask in the Hyperliquid Discord
-- Use trusted OTC desks
-- Always verify addresses before sending
-
 ## Converting HYPE to WHYPE
 
 Once you have HYPE, you need to wrap it to trade on hx.finance:
 
 ### Method 1: Using hx.finance Interface
 
-1. Go to [hx.finance](https://hx.finance)
+1. Go to [app.hx.finance](https://app.hx.finance)
 2. Click "Wrap" in the top menu
 3. Enter the amount of HYPE to wrap
 4. Click "Wrap HYPE"
