Tone down pushy sales language on homepage
- Removed overly enthusiastic marketing speak
- Made language more professional and informative
- Kept emojis but removed pushy phrases
- Changed 'We got you\!' to professional support section
- Removed 'We're all gonna make it' tagline
- More factual, less salesy approach

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,46 +1,45 @@
 # Welcome to hx.finance 👋
 
-The community-owned DEX that's making DeFi fun on Hyperliquid!
+A community-owned DEX built on Hyperliquid.
 
-## What's hx.finance all about? 🤔
+## What is hx.finance?
 
-We're building something special here. hx.finance isn't just another DEX - it's YOUR DEX. No VCs pulling strings, no insider deals, just a fair launch where 33% of tokens go straight to the community. That's you! 
+hx.finance is a decentralized exchange with a fair launch model. 33% of tokens are allocated to the community through our points system.
 
-### Why traders love us 💜
+### Key Features
 
-**Lightning Fast** ⚡
-Fast trade execution on Hyperliquid's high-performance chain.
+**Fast Trading** ⚡
+Benefit from Hyperliquid's high-performance blockchain infrastructure.
 
-**Earn While You Trade** 🏆
-Every swap earns you points. More points = more $HX tokens at launch!
+**Points System** 🏆
+Earn points for trading and providing liquidity. Points convert to $HX tokens at launch.
 
-**Built Different** 🛠️
-We're native to Hyperliquid, which means we can do things other DEXs can only dream about.
+**Native to Hyperliquid** 🛠️
+Built specifically for the Hyperliquid ecosystem with optimized performance.
 
-## Your Journey Starts Here 🚀
+## Getting Started 🚀
 
-### Brand New? Start Here!
-- **[Connect Your Wallet](/getting-started/connect-wallet)** - It's easier than you think! 
-- **[Get Some HYPE](/getting-started/get-hype)** - You'll need this for gas (spoiler: it's super cheap)
-- **[Make Your First Swap](/getting-started/first-swap)** - We'll hold your hand through it
+### New Users
+- **[Connect Your Wallet](/getting-started/connect-wallet)** - Set up your wallet connection
+- **[Get Some HYPE](/getting-started/get-hype)** - Acquire HYPE for gas fees
+- **[Make Your First Swap](/getting-started/first-swap)** - Start trading
 
-### Ready to Level Up? 📈
-- **[Become a Liquidity Provider](/liquidity/becoming-lp)** - Earn fees from every trade
-- **[Master the Points System](/points-rewards/how-points-work)** - Maximize your $HX allocation
-- **[Explore the Ecosystem](/ecosystem/overview)** - See what else we're building
+### Advanced Features
+- **[Become a Liquidity Provider](/liquidity/becoming-lp)** - Earn fees from trades
+- **[Understanding Points](/points-rewards/how-points-work)** - Learn about the rewards system
+- **[Explore the Ecosystem](/ecosystem/overview)** - Discover related projects
 
-## The hx.finance Difference 🌟
+## Fair Launch Model 🌟
 
-### Fair Launch, No BS
-- **33% to Points Holders** - That's you!
-- **No VC Allocation** - We said what we said
-- **Community First** - Every decision, every time
+### Token Distribution
+- **33% to Points Holders** - Community allocation
+- **No VC Allocation** - Fair launch principles
+- **Community Governance** - Decentralized decision making
 
-### Part of Something Bigger
-We're not just a DEX. We're part of a complete DeFi ecosystem:
-- **innocence.is** - Trade privately (coming soon) 🤫
-- **HyperMoon** - Pro trading on mobile 📱
-- **NFT Collections** - With real utility 🎨
+### Ecosystem Projects
+- **innocence.is** - Privacy-focused trading (coming soon)
+- **HyperMoon** - Mobile trading application 📱
+- **NFT Collections** - Utility-focused NFTs
 
 ## Quick Stats Dashboard 📊
 
@@ -52,12 +51,8 @@ We're not just a DEX. We're part of a complete DeFi ecosystem:
 | Min Gas Balance | ~0.1 HYPE |
 | Block Time | ~2 seconds |
 
-## Need Help? We Got You! 🤝
+## Community & Support 🤝
 
-- **[Discord](https://discord.gg/hxfinance)** - Come hang with the community
-- **[Twitter](https://twitter.com/hxfinance)** - Latest updates and alpha
-- **[FAQ](/troubleshooting/faq)** - Quick answers to common questions
-
----
-
-*Remember: We're all gonna make it. But only if we make it together.* 🚀
+- **[Discord](https://discord.gg/hxfinance)** - Community discussions
+- **[Twitter](https://twitter.com/hxfinance)** - Latest updates
+- **[FAQ](/troubleshooting/faq)** - Common questions answered
