Tone down overly enthusiastic language in guides
Connect Wallet:
- Removed 'Welcome friend\!' and excessive exclamations
- Made steps more direct and professional
- Simplified troubleshooting section
- Removed patronizing 'You're all set\!' ending

First Swap:
- Removed 'join the family' language
- Eliminated 'magic happens' and similar phrases
- Made instructions straightforward and factual
- Removed 'We've all been there' patronizing tone
- Kept friendly but professional approach

Also replaced all  references with 'hx.finance tokens' to avoid ticker front-running

--- a/pages/ecosystem/overview.mdx
+++ b/pages/ecosystem/overview.mdx
@@ -73,7 +73,7 @@ Best Execution
 - **Privacy Options**: Choose when to be anonymous
 - **Mobile Access**: Trade anywhere, anytime
 
-## The $HX Token
+## The hx.finance Token
 
 Central to the ecosystem:
 
@@ -114,7 +114,7 @@ We're building bridges with other Hyperliquid projects that share our values:
 - User value
 
 ### Benefits for Partners
-- Token allocation (15-20% of $HX)
+- Token allocation (15-20% of hx.finance tokens)
 - Shared liquidity
 - Cross-promotion
 - Technical collaboration
@@ -128,7 +128,7 @@ We're building bridges with other Hyperliquid projects that share our values:
 - 🔄 Ecosystem partnerships
 
 ### Q2 2025
-- 📅 $HX token launch
+- 📅 hx.finance token launch
 - 📅 innocence.is beta
 - 📅 NFT collections
 - 📅 HyperMoon iOS
