--- a/pages/getting-started/connect-wallet.mdx
+++ b/pages/getting-started/connect-wallet.mdx
@@ -1,46 +1,40 @@
-# Connect Your Wallet 🔗
+# Connect Your Wallet
 
-Welcome friend! Let's get you connected to hx.finance in just a few clicks.
+## Supported Wallets
 
-## Which Wallets Work? 🦊
+hx.finance supports all major EVM wallets:
 
-Good news - if you've used DeFi before, your wallet probably works! We support:
+- **MetaMask** - Most widely used
+- **WalletConnect** - Compatible with 100+ wallets
+- **Coinbase Wallet** - Mobile and browser extension
+- **Rainbow** - User-friendly interface
+- **Trust Wallet** - Popular mobile wallet
 
-- **MetaMask** 🦊 (Most popular - our top pick!)
-- **WalletConnect** 🔵 (Works with 100+ wallets)
-- **Coinbase Wallet** 💙 (Not the exchange, the wallet app)
-- **Rainbow** 🌈 (Beautiful and user-friendly)
-- **Trust Wallet** 🛡️ (Great mobile option)
+Need a wallet? [Download MetaMask](https://metamask.io)
 
-Don't have a wallet yet? No worries! [Get MetaMask here](https://metamask.io) - it takes 2 minutes.
+## Connection Steps
 
-## Let's Connect! Step-by-Step 🚀
+### Step 1: Visit the App
 
-### Step 1: Visit hx.finance 🌐
+Go to [app.hx.finance](https://app.hx.finance)
 
-Head over to [app.hx.finance](https://app.hx.finance). Bookmark it to avoid phishing sites!
+### Step 2: Click "Connect Wallet"
 
-### Step 2: Click "Connect Wallet" 🔌
+The connect button is located in the top right corner of the interface.
 
-Look for the connect button in the top right corner. Can't miss it!
+### Step 3: Select Your Wallet
 
-![Connect Button Location](/images/connect-button.png)
+Choose your wallet from the connection menu.
 
-### Step 3: Choose Your Wallet 💼
+**Note**: Mobile users should open hx.finance within their wallet's built-in browser.
 
-A menu will pop up with wallet options. Pick yours!
+### Step 4: Add Hyperliquid Network
 
-**Pro tip**: If using MetaMask on mobile, open hx.finance inside the MetaMask browser.
+If this is your first time, you'll need to add the Hyperliquid network:
+- Click "Approve" when prompted to add the network
+- The network will be added automatically
 
-### Step 4: Add Hyperliquid Network 🔧
-
-First time on Hyperliquid? No problem! If the network isn't added yet, we'll help you add it automatically.
-
-**What you'll see:**
-- A popup asking to add Hyperliquid network
-- Just click "Approve" - we handle the rest!
-
-**Network Details (for the curious):**
+**Network Details:**
 ```
 Network Name: Hyperliquid
 RPC URL: https://rpc.hyperliquid.xyz/evm
@@ -49,75 +43,55 @@ Symbol: HYPE
 Explorer: https://explorer.hyperliquid.xyz
 ```
 
-### Step 5: Approve Connection ✅
+### Step 5: Approve Connection
 
-Your wallet will ask: "Connect to hx.finance?"
-
-- Check the URL is correct
+When prompted:
+- Verify the URL is correct
 - Click "Connect" or "Approve"
-- That's it!
 
-### Step 6: You're In! 🎉
+Once connected, your wallet address will appear in the top right corner.
 
-Success! You'll see your address in the top right, something like: `0x1234...5678`
+## Troubleshooting
 
-**What you can do now:**
-- View your balances
-- Start swapping
-- Provide liquidity
-- Earn points!
+### Connection Issues
+- Refresh the page
+- Clear browser cache
+- Try a different browser
+- Ensure wallet is unlocked
 
-## Troubleshooting 🔧
+### Wrong Network
+- Click the network dropdown in your wallet
+- Select "Hyperliquid"
+- Or add it manually using the network details above
 
-### "Wallet won't connect" 😕
-Try this:
-1. Refresh the page (Ctrl+R or Cmd+R)
-2. Clear your browser cache
-3. Try a different browser
-4. Make sure your wallet is unlocked
+### Gas Requirements
+- Minimum: 0.1 HYPE for gas fees
+- Average transaction cost: < $0.01
+- See: [How to get HYPE](/getting-started/get-hype)
 
-### "Wrong network" 🔄
-Easy fix:
-1. Click the network name in your wallet
-2. Select "Hyperliquid"
-3. If not there, add it manually with the details above
+## Security
 
-### "Need HYPE for gas?" ⛽
-You'll need a tiny bit of HYPE for transactions:
-- 0.1 HYPE is plenty to start
-- Gas fees are super cheap (usually < $0.01)
-- Check out [how to get HYPE](/getting-started/get-hype)
+### Important Rules
+- Never share your seed phrase with anyone
+- Always verify the URL: https://app.hx.finance
+- Look for HTTPS padlock in browser
+- Bookmark the official site
 
-## Security First! 🔒
-
-### The Golden Rules:
-- **NEVER share your seed phrase** - Not even with "support"
-- **Always check the URL** - Only use https://app.hx.finance
-- **Look for the padlock** 🔒 - In your browser bar
-- **Bookmark the real site** - Avoid phishing
-
-### Red Flags 🚩
-Watch out for:
-- DMs asking for your seed phrase
-- "hx-finance.com" or similar fake URLs
+### Common Scams
+- DMs requesting seed phrases
+- Fake URLs (hx-finance.com, etc.)
 - Pop-ups asking for private keys
-- Too-good-to-be-true offers
+- Unrealistic offers or returns
 
-## Mobile Users 📱
+## Mobile Access
 
-**For best mobile experience:**
-1. Use your wallet's built-in browser
-2. Or use WalletConnect for seamless connection
-3. Everything works great on mobile!
+For mobile users:
+- Use your wallet's built-in browser for best experience
+- WalletConnect provides seamless mobile connection
 
-## You're All Set! 🎊
+## Next Steps
 
-Connected successfully? Amazing! You're ready to:
-
-- **[Get HYPE for gas](/getting-started/get-hype)** - You'll need this
-- **[Make your first swap](/getting-started/first-swap)** - Start earning points
-- **[Join our Discord](https://discord.gg/hxfinance)** - Say hi to the community!
-
----
-
-*Pro tip: The first connection is always the hardest. After this, your wallet will remember hx.finance!* 🧠
+After connecting:
+- [Get HYPE for gas](/getting-started/get-hype)
+- [Make your first swap](/getting-started/first-swap)
+- [Join Discord](https://discord.gg/hxfinance)
