--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -12,7 +12,7 @@ hx.finance is a decentralized exchange with a fair launch model. 33% of tokens a
 Benefit from Hyperliquid's high-performance blockchain infrastructure.
 
 **Points System** 🏆
-Earn points for trading and providing liquidity. Points convert to $HX tokens at launch.
+Earn points for trading and providing liquidity. Points convert to hx.finance tokens at launch.
 
 **Native to Hyperliquid** 🛠️
 Built specifically for the Hyperliquid ecosystem with optimized performance.
