--- a/pages/points-rewards/how-points-work.mdx
+++ b/pages/points-rewards/how-points-work.mdx
@@ -1,15 +1,15 @@
 # How Points Work 🏆
 
-Welcome to the most rewarding DEX in the game! Here's everything you need to know about earning your slice of the $HX pie.
+Welcome to the most rewarding DEX in the game! Here's everything you need to know about earning your slice of the hx.finance token pie.
 
 ## The Big Picture 🎯
 
-Points = Your share of $HX tokens at launch. It's that simple!
+Points = Your share of hx.finance tokens at launch. It's that simple!
 
 - **Earn by trading** 💱
 - **Earn by providing liquidity** 💧
 - **Multiply with tiers** 📈
-- **Convert to $HX at TGE** 🪙
+- **Convert to hx.finance tokens at TGE** 🪙
 
 ## Two Ways to Stack Points 📊
 
@@ -39,7 +39,7 @@ $10,000 in pools = 2,400 points/day = 72,000 points/month!!
 
 ## The Tier System - Level Up! 🎮
 
-Your tier multiplies ALL your points. Higher tier = more points = more $HX!
+Your tier multiplies ALL your points. Higher tier = more points = more hx.finance tokens!
 
 ### 🥉 **Bronze: Newcomer**
 - **Range**: 0-999 points
@@ -126,7 +126,7 @@ Track everything at [app.hx.finance/points](https://app.hx.finance/points):
 ## The Big Conversion 💰
 
 At TGE (Token Generation Event):
-- 33% of total $HX supply goes to point holders
+- 33% of total hx.finance token supply goes to point holders
 - Your share = (Your points ÷ Total points) × 33% supply
 
 **Example Math:**
@@ -134,8 +134,8 @@ At TGE (Token Generation Event):
 Total points: 100,000,000
 Your points: 50,000
 Your share: 0.05%
-33% supply: 330,000,000 $HX
-You get: 165,000 $HX tokens! 🎉
+33% supply: 330,000,000 hx.finance tokens
+You get: 165,000 hx.finance tokens! 🎉
 ```
 
 ## Tips from the OGs 🧙‍♂️
