--- a/pages/token/fair-launch.mdx
+++ b/pages/token/fair-launch.mdx
@@ -1,4 +1,4 @@
-# $HX Fair Launch
+# hx.finance Token Fair Launch
 
 hx.finance is committed to a truly fair token launch that rewards our community and ecosystem partners.
 
@@ -73,7 +73,7 @@ Future needs:
 
 2. **Calculation**
    ```
-   Your $HX = (Your Points / Total Points) × Community Allocation
+   Your tokens = (Your Points / Total Points) × Community Allocation
    ```
 
 3. **Distribution**
@@ -87,30 +87,30 @@ Future needs:
 ```
 Your Points: 5,000
 Total Points: 100,000,000
-Community Pool: 330,000,000 $HX
+Community Pool: 330,000,000 hx.finance tokens
 
 Your Share: 0.005%
-You Receive: 16,500 $HX
+You Receive: 16,500 hx.finance tokens
 ```
 
 **Active LP**
 ```
 Your Points: 250,000
 Total Points: 100,000,000
-Community Pool: 330,000,000 $HX
+Community Pool: 330,000,000 hx.finance tokens
 
 Your Share: 0.25%
-You Receive: 825,000 $HX
+You Receive: 825,000 hx.finance tokens
 ```
 
 **Power User**
 ```
 Your Points: 1,000,000
 Total Points: 100,000,000
-Community Pool: 330,000,000 $HX
+Community Pool: 330,000,000 hx.finance tokens
 
 Your Share: 1%
-You Receive: 3,300,000 $HX
+You Receive: 3,300,000 hx.finance tokens
 ```
 
 ## Ecosystem Partner Criteria
@@ -214,7 +214,7 @@ Qualifying projects must:
 - Treasury management
 
 ### Fee Sharing
-- Stake $HX
+- Stake hx.finance tokens
 - Earn protocol fees
 - Compound rewards
 - Passive income
@@ -231,7 +231,7 @@ Qualifying projects must:
 A: Date TBA - follow official channels
 
 **Q: How many tokens total?**
-A: 1 billion $HX (fixed supply)
+A: 1 billion hx.finance tokens (fixed supply)
 
 **Q: Will there be vesting?**
 A: No vesting for community allocation
