--- a/pages/troubleshooting/faq.mdx
+++ b/pages/troubleshooting/faq.mdx
@@ -10,7 +10,7 @@ We're the community-owned DEX on Hyperliquid! Think Uniswap, but faster, cheaper
 ### Why should I use hx.finance over other DEXs?
 - **Lightning fast** ⚡ - Quick trades on Hyperliquid
 - **Dirt cheap fees** 💸 - Gas costs are basically nothing
-- **You earn points** 🏆 - Every trade gets you closer to $HX tokens
+- **You earn points** 🏆 - Every trade gets you closer to hx.finance tokens
 - **Fair launch** 🤝 - 33% to community, not to VCs
 - **Part of an ecosystem** 🌐 - Privacy tools and mobile apps coming!
 
@@ -80,13 +80,13 @@ Simple:
 - **Tiers**: Multiply everything up to 1.5x!
 
 ### When moon... I mean, when token?
-$HX launches Soon™. We'll announce 30 days before. Follow our Twitter for the alpha!
+The hx.finance token launches Soon™. We'll announce 30 days before. Follow our Twitter for the alpha!
 
 ### Can I buy points?
 Nope! That's the "fair" in fair launch. Points only come from using the platform. No shortcuts, everyone plays by the same rules.
 
 ### What happens to my points?
-At TGE, your points convert to $HX tokens. Your share = your points ÷ total points × 33% of supply. Math is beautiful! 🧮
+At TGE, your points convert to hx.finance tokens. Your share = your points ÷ total points × 33% of supply. Math is beautiful! 🧮
 
 ## Technical Stuff 🔧
 
