--- a/pages/getting-started/first-swap.mdx
+++ b/pages/getting-started/first-swap.mdx
@@ -1,138 +1,124 @@
-# Your First Swap 🎉
+# Your First Swap
 
-Ready to join the hx.finance family? Let's make your first trade together!
+## Prerequisites
 
-## Quick Check - You Ready? ✅
+Before trading, ensure you have:
+- Wallet connected - [Connection guide](/getting-started/connect-wallet)
+- HYPE for gas fees - [Get HYPE](/getting-started/get-hype)
+- Tokens to trade (WHYPE, USDE, etc.)
 
-Before we dive in, make sure you've got:
-- **Wallet connected** → [Need help?](/getting-started/connect-wallet)
-- **Some HYPE for gas** → [Get some here](/getting-started/get-hype)
-- **Tokens to trade** → WHYPE, USDE, or any supported token
+## How to Swap
 
-Got everything? Let's go! 🚀
+### Step 1: Navigate to the App
 
-## The Simple Swap Guide
+Visit [app.hx.finance](https://app.hx.finance)
 
-### Step 1: Head to the Swap Page 🔄
+### Step 2: Select Tokens
 
-Jump over to [app.hx.finance](https://app.hx.finance) - this is where the magic happens!
-
-### Step 2: Pick Your Tokens 🪙
-
-Time to choose what you're trading!
-
-**The "From" Token** (what you're selling)
+**From Token** (selling):
 - Click the top dropdown
-- Pick from your wallet or search
-- Pro tip: WHYPE/USDE is perfect for first-timers!
+- Select from available tokens
+- Common pairs: WHYPE/USDE, WHYPE/UETH
 
-**The "To" Token** (what you're buying)
-- Click the bottom dropdown  
-- Choose your destination token
-- The app only shows available pairs (no dead ends!)
+**To Token** (buying):
+- Click the bottom dropdown
+- Choose your target token
+- Only tradeable pairs are shown
 
-### Step 3: How Much? 💰
+### Step 3: Enter Amount
 
-Here's the cool part - you can enter EITHER:
-- The amount you want to **sell** (top box), OR
-- The amount you want to **buy** (bottom box)
+You can specify either:
+- Amount to sell (top field)
+- Amount to buy (bottom field)
 
-The other one fills in automatically. It's like magic, but it's just math! ✨
+The corresponding amount is calculated automatically.
 
-### Step 4: The Important Stuff 👀
+### Step 4: Review Trade Details
 
-Before you hit that button, take a quick peek at:
+Check these important metrics:
 
-**Exchange Rate** 💱
-Shows you exactly what you're getting (e.g., 1 WHYPE = 50.25 USDE)
+**Exchange Rate**
+Current price ratio between tokens (e.g., 1 WHYPE = 50.25 USDE)
 
-**Price Impact** 📊
-- Green (< 0.1%) = You're golden! 
-- Yellow (0.1-1%) = Still good!
-- Orange (1-3%) = Maybe split this trade up?
-- Red (> 3%) = Whoa there, big spender!
+**Price Impact**
+- < 0.1% - Minimal impact (green)
+- 0.1-1% - Acceptable (yellow)
+- 1-3% - Consider smaller trades (orange)
+- > 3% - High impact, split your trade (red)
 
-**Network Fee** ⛽
-Usually less than $0.01. Yes, really!
+**Network Fee**
+Typically less than $0.01 on Hyperliquid
 
-### Step 5: Optional Settings ⚙️
+### Step 5: Settings (Optional)
 
-Feeling adventurous? Click the gear icon:
-- **Slippage**: How much price movement you'll accept (default 0.5% is usually fine)
-- **Deadline**: How long before the trade expires (30 mins default)
+Click the gear icon to adjust:
+- **Slippage Tolerance**: Max price change allowed (default: 0.5%)
+- **Transaction Deadline**: Time before trade expires (default: 30 minutes)
 
-### Step 6: Swap It! 🎯
+### Step 6: Execute Swap
 
-This is it! The big moment!
-- Hit that beautiful **"Swap"** button
-- Review everything one more time
-- Click **"Confirm Swap"**
+1. Click the **"Swap"** button
+2. Review transaction details in the confirmation window
+3. Click **"Confirm Swap"**
 
-### Step 7: Wallet Time 📱
+### Step 7: Wallet Confirmation
 
-Your wallet will pop up asking for approval:
-- Double-check the details (always good practice!)
-- Check the gas fee (should be tiny)
-- Hit **"Confirm"**
+Your wallet will prompt you to:
+- Review transaction details
+- Check gas fee estimate
+- Click **"Confirm"** to execute
 
-### Step 8: Victory! 🎊
+### Step 8: Transaction Complete
 
-Boom! You did it! 
-- Transaction confirms quickly
-- Your new tokens appear in your wallet
-- You just earned your first points!
+After confirmation:
+- Transaction processes on-chain
+- New tokens appear in your wallet
+- Points are automatically credited
 
-## Let's Try an Example Together 🤝
+## Example Trade
 
-Say you want to swap 10 WHYPE for USDE:
+Swapping 10 WHYPE for USDE:
 
 ```
-Starting with: 10 WHYPE
-Current rate: 1 WHYPE = 50 USDE
-You'll get: ~500 USDE
-Price impact: 0.05% ✅
+Input: 10 WHYPE
+Rate: 1 WHYPE = 50 USDE
+Output: ~500 USDE
+Price impact: 0.05%
 Network fee: ~$0.005
-Points earned: 5 🎉
+Points earned: 5
 ```
 
-Easy peasy, right?
+## Trading Tips
 
-## Pro Tips from the Community 💡
+**Start Small**
+Practice with smaller amounts to understand the interface.
 
-### Start Small, Think Big
-Your first swap doesn't need to be huge. Even $10 helps you learn the ropes!
+**Monitor Price Impact**
+Keep impact under 1% for optimal rates. Split large trades if needed.
 
-### Watch That Impact
-Keep price impact under 1% for the best rates. Big trades? Split 'em up!
+**Points Accumulation**
+Every dollar traded earns 0.01 points towards your token allocation.
 
-### Points = Future $HX
-Every dollar swapped = 0.01 points. It adds up fast!
+**Low Gas Costs**
+Hyperliquid's efficient infrastructure keeps transaction costs minimal.
 
-### Gas is Basically Free
-Seriously, we're talking pennies here. Hyperliquid is amazing like that.
-
-## Common Hiccups (We've All Been There) 🤷
+## Common Issues
 
 ### "Insufficient Balance"
-- Check you have enough tokens (including gas!)
-- Remember: HYPE ≠ WHYPE
+- Verify token balance including gas
+- Note: HYPE and WHYPE are different tokens
 
 ### "Price Impact Too High" 
-- Your trade is too big for the pool
-- Solution: Trade a smaller amount
+- Trade size exceeds available liquidity
+- Solution: Reduce trade amount
 
 ### "Transaction Failed"
-- Usually means slippage is too low
-- Bump it up to 1% and try again
+- Often due to insufficient slippage tolerance
+- Increase to 1% and retry
 
-## What's Next? 🌟
+## Next Steps
 
-Congrats, you're officially part of the hx.finance family! Ready for more?
-
-- **[Learn About Liquidity](/liquidity/becoming-lp)** - Earn fees from trades
-- **[Understand Points](/points-rewards/how-points-work)** - Maximize your rewards
-- **[Join Discord](https://discord.gg/hxfinance)** - Meet other traders
-
----
-
-*Remember: Every expert was once a beginner. You're doing great!* 💜
+After your first swap:
+- [Learn About Liquidity](/liquidity/becoming-lp) - Provide liquidity and earn fees
+- [Understand Points](/points-rewards/how-points-work) - Maximize your rewards
+- [Join Discord](https://discord.gg/hxfinance) - Connect with the community
